--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
   color: white;
+  border-radius: 50px;
+  width: 300px;
+  height: 500px;
+  padding: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  position: fixed;
+  z-index: 2;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.bot {
+  height: 1px;
+  padding: 0 20px;
+  z-index: 2;
+  margin-top: 15px;
+  margin-left: 94px;
+  align-items: left;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.display {
+  text-align: right;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 20px;
+  height: 75px;
+  width: 300px;
+  z-index: 2;
+  overflow: hidden;
+}
+
+.expression {
+  text-align: right;
+  word-wrap: break-word;
+  font-size: 20px;
+  margin-top: 10px;
+  z-index: 2;
+}
+
+.button {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  z-index: 2;
+}
+
+.background {
+  height: 550px;
+  width: 375px;
+  list-style: none;
+  position: fixed;
+  top: 15px;
+  z-index: -1;
+  display: flex;
+  justify-content: flex-end;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  padding: 20px;
+}
+
+.show ul {
+  list-style: none;
+  animation-name: mymove;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes mymove {
+  0% {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    opacity: 1;
+  }
+}
+
+.hide ul {
+  list-style: none;
+  animation-name: abc;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes abc {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
